crates/credential-runtime/tests/compile_fail/snapshot_not_serialize.stderr
error[E0277]: the trait bound `CredentialSnapshot: serde::Serialize` is not satisfied
  --> tests/compile_fail/snapshot_not_serialize.rs:26:24
   |
26 |     requires_serialize(&snapshot);
   |     ------------------ ^^^^^^^^^ the trait `Serialize` is not implemented for `CredentialSnapshot`
   |     |
   |     required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `CredentialSnapshot` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `requires_serialize`
  --> tests/compile_fail/snapshot_not_serialize.rs:15:26
   |
15 | fn requires_serialize<T: serde::Serialize>(_: &T) {}
   |                          ^^^^^^^^^^^^^^^^ required by this bound in `requires_serialize`
